[package]
name = "pathfinder_test_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tycho-client = "0.70.8"
tycho-common = "0.70.8"
tracing-subscriber = "0.3"
tokio = { version = "1.4.5", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4"
reqwest = { version = "0.12.19", features = ["json"] }
dotenv = "0.15"
clap = "4.5.40"
num-bigint = "0.4.6" 
futures = "0.3.31"
log = "0.4"
env_logger = "0.11.0"
# tycho-simulation = { git = "https://github.com/propeller-heads/tycho-simulation.git",  branch = "main" }
tycho-simulation = { path = "../tycho-simulation" }